	  are possibly faster. I haven't noticed any difference between the
	  two speed-wise, but there probably are in some rare cases.

2011-05-06 Cedric Bail

	* Don't try all image loader when user is pointing them on a directory.

2011-05-11  Carsten Haitzler (The Rasterman)

	* Fix problem with Evas engine not calling pre/post swap functions
        in the GL engine when using EGL/OpenGL-ES2
        * Fix SVG loader 2 phase loader having differing scale down code
        for first and 2nd phase. Resulted in crash when loading some SVGs

2011-05-11 Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_node_format_list_get. This is very
	  useful for edje_entry that uses anchors in the text.

2011-05-12  Carsten Haitzler (The Rasterman)

	* Add smart instance usage count get function for ability to free
        data from memory from a smart class if needed.

2011-05-12 Brian Wang

	* Textblock: fix segfault with evas_textblock_cursor_content_get

2011-05-12  Carsten Haitzler (The Rasterman)

	* Add a smart "Grid" layout object that lays out objects in a regular
        "virtual resolution" grid (eg 100x100) so you can lay them out
        as a "scaled percentage" of the virtual resolution. virtual
        resolution is defineable as is the geometry of each member.

2011-05-18  Sung W. Park

	* Fix some internal stencil and depth requests for OpenGL-ES2
        due to OpenGL-ES limitations.
        * Fix Surface recreation for FBO in Evas GL support.

2011-05-23  Vincent Torri

	* Fix compilation with libjpeg 8 on Windows.

2011-05-24  Cedric Bail

	* Use Eina_File when possible.

2011-05-26  Carsten Haitzler (The Rasterman)

	* Fix Evas table to handle weighting correctly for items and veto
        rows or columns that have any child spanning that column not
        able to expand.
        * Fix Evas table to use actual fractional weights, not just
        boolean expand/not expand from weight value.
